# semver-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml  release.yml
src/: main.rs
