[package]
name = "semver-cli"
version = "0.1.0"
edition = "2021"
authors = ["Onypko Dmytro <vapori@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 's'
strip = true
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
semver = "1.0.22"

