[package]
name = "semver-cli-check"
version = "0.1.0"
edition = "2021"
authors = ["Onypko Dmytro <vapori@gmail.com>"]
repository = "https://github.com/vaporif/semver-cli-check"
documentation = "https://github.com/vaporif/semver-cli-check"
description = "cli util to validate semver"
keywords = ["cargo", "subcommand", "semver"]
license-file = "LICENSE"

[profile.release]
opt-level = 's'
strip = true
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
semver = "1.0.22"

